# crosstable-updater

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: crossmap_gen.rs  main.rs
