[package]
name = "crosstable-updater"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crosstable_updater"
path = "src/main.rs"

[[bin]]
name = "crossmap_gen"
path = "src/crossmap_gen.rs"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
enum_index = "0.2.0"
indicatif = "0.17.6"
rayon = "1.7.0"
regex = "1.9.5"
t1ha = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ysc-utils]
git = "https://github.com/Jaycadox/ysc-utils.git"
branch = "old-script-format"

